Fix for print on Firefox

--- a/src/styles/base.pcss
+++ b/src/styles/base.pcss
@@ -405,3 +405,10 @@ pre {
     margin-right: 0;
   }
 }
+
+@media print {
+  @page {
+    size: A4 landscape;
+    margin: 0;
+  }
+}
